--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ MarkupSafe==2.1.2
 pytz==2023.3
 PyMySQL==1.0.3
 python-dotenv==1.0.0
+python-dateutil==2.8.2
 requests==2.29.0
 SQLAlchemy==2.0.10
 typing_extensions==4.5.0
