--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.26.125
 cachelib==0.10.2
 click==8.1.3
 colorama==0.4.6
+cryptography==41.0.1
 Flask==2.2.3
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
