--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+psycopg2-binary==2.9.10
 pytz==2023.3
 PyMySQL==1.0.3
 python-dotenv==1.0.0
